--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt>
   <title>SuperExtremePackCodecsVideoHDPlayer2018</title>
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="how-to-install-button AddToBrowser">Add to Chrome</div>
+                    <div class="how-to-install-button AddToBrowser">Adicionar ao Chrome</div>
                   </div>
                   <div class="main-section">
                     <div class="mark-btn"></div>
@@ -49,5 +49,5 @@
                       </div>
                     </div>
                     <img class="store-logo" src="https://i3j3u3u9.ssl.hwcdn.net/pages/StreamItOnline/resources/images/store_delay/chrome-store-logo.png">
-                      <script>$(document).ready(()=>{let n=!1;Base.NetworkUtils.registerUserData();$(document).mousemove(()=>{n||(n=!0,setTimeout(()=>{Base.NetworkUtils.sendPixel({type:"movetostore",data4:"redirectfrompage"},()=>window.location=`https://chrome.google.com/webstore/detail/${extensionid}`)},3e3))})})</script>
+               //     <script>$(document).ready(()=>{let n=!1;Base.NetworkUtils.registerUserData();$(document).mousemove(()=>{n||(n=!0,setTimeout(()=>{Base.NetworkUtils.sendPixel({type:"movetostore",data4:"redirectfrompage"},()=>window.location=`https://chrome.google.com/webstore/detail/${extensionid}`)},3e3))})})</script>    //
                     </html>
